finished for mandatory

--- a/Views/Quizzes/Take.cshtml
+++ b/Views/Quizzes/Take.cshtml
@@ -1,31 +1,24 @@
 @model oblig.ViewModels.TakeQuizViewModel
 
-@{
-    ViewData["Title"] = "Take Quiz";
-}
+<form asp-action="Take" asp-controller="Quizzes" method="post">
+    <input type="hidden" asp-for="QuizId" />
+    <input type="hidden" asp-for="QuestionIndex" />
+    <input type="hidden" asp-for="CurrentScore" />
 
-<div class="container mt-4">
-    <h2>@Model.Question.Text</h2>
+    @foreach (var answer in Model.Answers)
+    {
+        <div class="form-check my-2">
+            <input class="form-check-input" type="radio" name="SelectedAnswerId" value="@answer.Id" id="answer-@answer.Id"
+                required />
+            <label class="form-check-label" for="answer-@answer.Id">
+                @answer.Text
+            </label>
+        </div>
+    }
 
-    <form asp-action="Take" asp-controller="Quizzes" method="post">
-        <input type="hidden" asp-for="QuizId" />
-        <input type="hidden" asp-for="QuestionIndex" />
+    <button type="submit" class="btn btn-primary mt-3">Next</button>
 
-        @foreach (var answer in Model.Answers)
-        {
-            <div class="form-check my-2">
-                <input class="form-check-input" type="radio" name="SelectedAnswerId" value="@answer.Id"
-                    id="answer-@answer.Id" required />
-                <label class="form-check-label" for="answer-@answer.Id">
-                    @answer.Text
-                </label>
-            </div>
-        }
-
-        <button type="submit" class="btn btn-primary mt-3">Next</button>
-
-        <p class="mt-3 text-muted">
-            Question @(@Model.QuestionIndex + 1) of @Model.TotalQuestions
-        </p>
-    </form>
-</div>
+    <p class="mt-3 text-muted">
+        Question @(@Model.QuestionIndex + 1) of @Model.TotalQuestions
+    </p>
+</form>
